Bug 313510 - "Replace recognized prefix with ..." check-boxes got checked every time
Summary: "Replace recognized prefix with ..." check-boxes got checked every time
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: config dialog (other bugs)
Version First Reported In: 4.9.97 RC2
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-19 14:40 UTC by Felix Yan
Modified: 2013-01-19 16:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Yan 2013-01-19 14:40:21 UTC
In the Configure - KMail Window -> Composer Tab -> Subject Tab, These two check-boxes are always checked every time this configuration tab is opened:

* Replace recognized prefix with "Re:"
* Replace recognized prefix with "Fwd:"

Reproducible: Always

Steps to Reproduce:
1. Open the configuration window, navigate to "Composer -> Subject" tab, uncheck either of the two check-boxes or both.
2. Click "Apply" (And close the window) or "OK".
3. Re-open the configuration and navigate to the same tab.
Actual Results:  
The settings are applied correctly to message list, but the check-boxes got checked again when opening the certain configuration tab.

Expected Results:  
See the same status of check-boxes as last save.
Comment 1 Laurent Montel 2013-01-19 16:01:56 UTC
Will fix it tomorrow.
Regards.
Comment 2 Laurent Montel 2013-01-19 16:07:52 UTC
Git commit 11d9d79b0c359edb9b7852134d1f14ea2ed38a35 by Montel Laurent.
Committed on 19/01/2013 at 17:07.
Pushed by mlaurent into branch 'KDE/4.10'.

Fix Bug 313510 - "Replace recognized prefix with ..." check-boxes got

checked every time
FIXED-IN: 4.10

M  +2    -0    kmail/configuredialog.cpp

http://commits.kde.org/kdepim/11d9d79b0c359edb9b7852134d1f14ea2ed38a35
Comment 3 Laurent Montel 2013-01-19 16:08:15 UTC
Finally fixed now :)