Fix Bug 313510 - "Replace recognized prefix with ..." check-boxes got

checked every time
FIXED-IN: 4.10
BUG: 313510